# mastering-langchain_graph

./: 01main.py  02core_concepts.py  03working_with_llms.py  04prompt_messages.py  06output_parsers_demo.py  08smart_bot_section1.py  09chains_v1.py  10document_loaders.py  12embeddings.py  13embeddings_deep.py  14rag_pipeline.py  15advanced_rag.py  17vector_stores.py  18conversation_memory.py  19langgraph_core.py  23agent_handoffs.py  24human_in_loop.py  25checkpointing.py  26tool_calling_agent.py  27parallel_agents.py  29supervisor_agent.py  30agent_communication.py  31multi_agent_research_system.py  32testing_patterns.py  33error_handling.py  34security_patterns.py  35cost_optimization.py  36monitoring.py  README.md  pyproject.toml
LLM_Obs_Langfuse/: first_trace_llm.py  instrumented_llm.py  rag_pipeline_obs.py  tokens-demo-1.py
LLM_Obs_Langfuse/chroma_db/: chroma.sqlite3
Production_api/: .env.example  pyproject.toml
Production_api/app/: agent.py  config.py
chroma_db/: chroma.sqlite3
langc_course.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
research_db/: chroma.sqlite3
